# WordleGame

./: .gitignore  CMakeLists.txt  Main.qml  README.md  WordOperator.cpp  WordOperator.h  main.cpp  resources.qrc
